--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,6 +10,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'  # Specify your desired Python version
+
+      - name: Install Dependencies
+        run: |
+          pip install -r requirements.txt
+          pip install pytest  ## Ensure pytest is installed
+
+      - name: Run Tests
+        run: |
+          pytest  
+
+      - name: Build Docker Image
+        run: |
+          docker build -t arogbonlo/flask-app .
+        env:
+          DOCKER_BUILDKIT: 1
+
+      - name: Login to Docker Hub
+        run: |
+          echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
+
+      - name: Push to Docker Hub
+        run: |
+          docker push arogbonlo/flask-app
+    
     - name: Checkout code
       uses: actions/checkout@v3
 
