--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Deploy to Kubernetes
+name: CI/CD Pipeline for GitOps with ArgoCD
 
 on:
   push:
@@ -6,27 +6,31 @@ on:
       - main
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v2
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Build and Push Docker Image
+      run: |
+        docker build -t arogbonlo/flask-app:latest ./app
+        docker push arogbonlo/flask-app:latest
+    
   deploy:
     runs-on: ubuntu-latest
-
+    needs: build
     steps:
-    
-    - name: Checkout code
-      uses: actions/checkout@v3
+    - name: Checkout Manifest Repository
+      uses: actions/checkout@v2
 
-    - name: Set up Kubernetes
-      uses: azure/setup-kubectl@v4.0.0
-      with:
-        version: v1.31 
-
-    - name: Set up Kustomize
+    - name: Update Kubernetes Manifests
       run: |
-        KUSTOMIZE_VERSION=$(curl -s "https://api.github.com/repos/kubernetes-sigs/kustomize/releases/latest" | grep tag_name | cut -d '"' -f 4)
-        KUSTOMIZE_BIN="kustomize_${KUSTOMIZE_VERSION#v}_linux_amd64"
-        curl -LO "https://github.com/kubernetes-sigs/kustomize/releases/download/${KUSTOMIZE_VERSION}/${KUSTOMIZE_BIN}.tar.gz"
-        tar xzf "${KUSTOMIZE_BIN}.tar.gz"
-        sudo mv kustomize /usr/local/bin/
-        kustomize version
-
-    - name: Apply manifests
-      run: kubectl apply -k .
+        sed -i 's|image: .*|image: arogbonlo/flask-app:latest|' apps/flask-app/deployment.yaml
+      
+    - name: Deploy Manifests to Minikube via ArgoCD
+      run: |
+        kubectl apply -f apps/flask-app/
