--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline for GitOps with ArgoCD
+name: CI/CD Pipeline
 
 on:
   push:
@@ -6,31 +6,59 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
-    - name: Checkout Code
+    - name: Checkout code
       uses: actions/checkout@v2
-    
+
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      uses: docker/setup-buildx-action@v2
 
-    - name: Build and Push Docker Image
-      run: |
-        docker build -t arogbonlo/flask-app:latest .
-        docker push arogbonlo/flask-app:latest
-    
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-    - name: Checkout Manifest Repository
-      uses: actions/checkout@v2
+    - name: Log in to Docker Hub
+      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-    - name: Update Kubernetes Manifests
+    - name: Build Docker image
+      run: docker build -t arogbonlo/flask-app:latest .
+
+    - name: Push Docker image
+      run: docker push arogbonlo/flask-app:latest
+
+    - name: Set up Minikube
+      uses: manusa/actions-setup-minikube@v2
+      with:
+        minikube-version: 'latest'
+        kubernetes-version: 'v1.24.0'
+        driver: docker
+
+    - name: Install Argo CD CLI
       run: |
-        sed -i 's|image: .*|image: arogbonlo/flask-app:latest|' apps/flask-app/deployment.yaml
-      
-    - name: Deploy Manifests to Minikube via ArgoCD
+        curl -sSL -o /usr/local/bin/argocd https://github.com/argoproj/argo-cd/releases/download/v2.9.2/argocd-linux-amd64
+        chmod +x /usr/local/bin/argocd
+
+    - name: Deploy Application to Minikube
       run: |
-        kubectl apply -f apps/flask-app/
+        kubectl create namespace argocd
+        kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+        kubectl wait --for=condition=available --timeout=600s deployment/argocd-server -n argocd
+        kubectl apply -f ./k8s/app-deployment.yaml
+        kubectl apply -f ./k8s/traefik-ingress.yaml
+
+    - name: Configure Argo CD Application
+      run: |
+        argocd login --core
+        argocd app create flask-app \
+          --repo https://github.com/Arogbonlo/flask-app \
+          --path k8s \
+          --dest-server https://kubernetes.default.svc \
+          --dest-namespace default \
+          --sync-policy automated
+
+    - name: Sync Argo CD Application
+      run: argocd app sync flask-app
+
+    - name: Install Grafana
+      run: |
+        kubectl apply -f https://raw.githubusercontent.com/grafana/helm-charts/main/charts/grafana/templates/all.yaml
+        kubectl expose deployment grafana --type=NodePort --name=grafana-service --namespace=default
