--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -38,6 +38,16 @@ jobs:
           curl -sSL -o /usr/local/bin/argocd https://github.com/argoproj/argo-cd/releases/download/v2.9.2/argocd-linux-amd64
           chmod +x /usr/local/bin/argocd
 
+      - name: Check Argo CD Installation
+        run: |
+         kubectl get pods -n argocd || exit 1
+         kubectl get configmap -n argocd || exit 1
+
+     - name: Reapply Argo CD Manifests
+       run: |
+         kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
+ 
+
       - name: Deploy Application to Minikube
         run: |
           kubectl create namespace argocd
